--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <form action="">
                 <button id="btn_buscar" class="btn_opciones_G">BUSCAR</button>
                 <input id="campo_busqueda" class="campo_busqueda_G">
+                <a href="./../index.html">
+                    <p id="logo_principal" class="btn_opciones_G">PAGINA PRINCIPAL</p>
+                </a>
             </form>
         </div>
         <! Opciones de la pagina (inicio de sesion, registro) >
@@ -21,6 +24,7 @@
             <button id="btn_carrito" class="btn_opciones_G">CARRITO</button>
             <button id="btn_inicio" class="btn_opciones_G">Iniciar Sesion</button>
             <button id="btn_registro" class="btn_opciones_G">Registrarme</button>
+            <button id="btn_cerrar" class="btn_opciones_G">Cerrar Sesion</button>
         </div>
     </header>
 
