Completos los diseños basicos

--- a/html/ordenes.html
+++ b/html/ordenes.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Busqueda</title>
-    <link rel="stylesheet" href="./../css/libros_buscados.css">
+    <title>Ordenes</title>
+    <link rel="stylesheet" href="./../css/ordenes.css">
     <link rel="stylesheet" href="./../css/estilos_globales.css">
 </head>
 <body>
+
     <! Cabecera >
     <header id="cabecera">
         <! Barra de busqueda >
@@ -33,7 +34,10 @@
 
     <! Contenido principal >
     <div id="contenido">
-        <div id="libros"></div>
+        <div id="libros">
+            <div id="ordenes"></div>
+            <div id="pedidos"></div>
+        </div>
     </div>
 
     <! Pie de pagina >
