--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             <form action="">
                 <button id="btn_buscar" class="btn_opciones_G">BUSCAR</button>
                 <input id="campo_busqueda" class="campo_busqueda_G">
-                <a href="./../index.html">
+                <a href="./index.html">
                     <p id="logo_principal" class="btn_opciones_G">PAGINA PRINCIPAL</p>
                 </a>
+                <p id="bienvenido" class="btn_opciones_G">Bienvenido</p>
             </form>
         </div>
         <! Opciones de la pagina (inicio de sesion, registro) >
@@ -25,6 +26,8 @@
             <button id="btn_inicio" class="btn_opciones_G">Iniciar Sesion</button>
             <button id="btn_registro" class="btn_opciones_G">Registrarme</button>
             <button id="btn_cerrar" class="btn_opciones_G">Cerrar Sesion</button>
+            <button id="btn_ordenes" class="btn_opciones_G">Ordenes</button>
+            <button id="btn_libros" class="btn_opciones_G">Libros</button>
         </div>
     </header>
 
