--- a/html/libro.html
+++ b/html/libro.html
@@ -17,6 +17,7 @@
                 <a href="./../index.html">
                     <p id="logo_principal" class="btn_opciones_G">PAGINA PRINCIPAL</p>
                 </a>
+                <p id="bienvenido" class="btn_opciones_G">Bienvenido</p>
             </form>
         </div>
         <! Opciones de la pagina (inicio de sesion, registro) >
@@ -25,6 +26,8 @@
             <button id="btn_inicio" class="btn_opciones_G">Iniciar Sesion</button>
             <button id="btn_registro" class="btn_opciones_G">Registrarme</button>
             <button id="btn_cerrar" class="btn_opciones_G">Cerrar Sesion</button>
+            <button id="btn_ordenes" class="btn_opciones_G">Ordenes</button>
+            <button id="btn_libros" class="btn_opciones_G">Libros</button>
         </div>
     </header>
 
@@ -39,6 +42,7 @@
             <div id="pago">
                 <p id="precio">Precio: $1000</p>
                 <button id="agregar_carrito" class="btn_opciones_G">Añadir al Carrito</button>
+                <button id="compra_proveedor" class="btn_opciones_G">Comprar a Proveedor</button>
             </div>
             <div id="recomendacion"></div>
         </div>
