Recursos para libros

--- a/html/libro.html
+++ b/html/libro.html
@@ -34,7 +34,9 @@
     <! Contenido principal >
     <div id="contenido_libro">
         <div id="libro_todo">
-            <div id="imagen_libro"></div>
+            <div id="imagen_libro">
+                <div id="img"></div>
+            </div>
             <div id="informacion">
                 <p id="titulo">Titulo del libro</p>
                 <p id="info">Informacion del libro</p>
