Conexion a base de datos y href(index)

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<?php include("./php/conexion.php") ?>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +9,8 @@
     <link rel="stylesheet" href="./css/estilos_globales.css">
 </head>
 <body>
+
+
     <! Cabecera >
     <header id="cabecera">
         <! Barra de busqueda >
@@ -40,5 +44,7 @@
 
     <! Pie de pagina >
     <footer id="pie"></footer>
+
+    <script type="text/javascript" src="./scripts/botones.js"></script>
 </body>
 </html>
