Inicio, registro, busqueda, carrito, pagos, envios, etc

--- a/html/carrito.html
+++ b/html/carrito.html
@@ -15,7 +15,7 @@
             <form action="">
                 <button id="btn_buscar" class="btn_opciones_G">BUSCAR</button>
                 <input id="campo_busqueda" class="campo_busqueda_G">
-                <a href="./../index.html">
+                <a href="../index.php">
                     <p id="logo_principal" class="btn_opciones_G">PAGINA PRINCIPAL</p>
                 </a>
                 <p id="bienvenido" class="btn_opciones_G">Bienvenido</p>
